--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <header class="top-heading">
-        <div class="title">TravelOn</div>
+        <div ><a href="index.html" class="title">TravelOn</a></div>
         <ul class="list nav-icons">
             <li class="nav-items"><a class="nav-link" href="maldives.html">Packages</li>
             <li class="nav-items"><a class="nav-link" href="blog.html">Travel Blog</a> </li>
             
             <li class="nav-items"><a class="nav-link" href="WorkForUs.html">Work with us</a></li>
+
+            <li class="nav-items"><a class="nav-link offer" href="luckydraw.html">Win 50% off!</a></li>
         </ul>
         <div class="list 
         user-icons">
@@ -28,7 +30,7 @@
     <section class="section" style="padding: 80px;">
 
         <div>
-            <h2 class="mai-heading">Screw Covid,<br> let's travel</h2>
+            <h2 class="mai-heading">Don't sit at home. go travel</h2>
             <a href="contactus.html"><button class="cta">Book now</button></a>
         </div>
         <img class="section-img" src="travel.jpg" alt="Travel Photo">
