--- a/maldives.html
+++ b/maldives.html
@@ -11,16 +11,18 @@
 <body>
     <!-- Header -->
     <header class="top-heading">
-        <div class="title">TITLE</div>
+        <div ><a href="index.html" class="title">TravelOn</a></div>
         <ul class="list nav-icons">
-            <li class="nav-items"><a class="nav-link" href="#">Who are we</a> </li>
-            <li class="nav-items"><a class="nav-link" href="#">Packages</li>
-            <li class="nav-items"><a class="nav-link" href="#">Work with us</a></li>
+            <li class="nav-items"><a class="nav-link" href="maldives.html">Packages</li>
+            <li class="nav-items"><a class="nav-link" href="blog.html">Travel Blog</a> </li>
+            
+            <li class="nav-items"><a class="nav-link" href="WorkForUs.html">Work with us</a></li>
+            <li class="nav-items"><a class="nav-link offer" href="luckydraw.html">Win 50% off!</a></li>
         </ul>
         <div class="list 
         user-icons">
-            <li class="user-item btn" id="login">Log In</li>
-            <li class="user-item btn" id="signUp">Sign up</li>
+            <a href="login.html"><button class="user-item btn" id="login">Log In</button></a>
+            <a href="signup.html"><button class="user-item btn" id="signUp">Sign up</button></a>
         </div>
 
     </header>
@@ -48,7 +50,7 @@
                         <div class="card-extra">
                             <p class="location">Makunudu Island is one of the original and much loved Maldivian island resorts. With only 36 simple and traditionally designed bungalows set amidst lush tropical vegetation each with direct beach access. Superb house reef.</p>
                             
-                            <a href="#"><button class="card-btn">Know more</button></a>
+                            <a href="https://www.makemytrip.com/hotels-international/maldives/maldives-hotels/makunudu_island_an_intimate_hideaway-details.html"><button class="card-btn">Know more</button></a>
                             <button class="card-btn book-now">Book Now</button>
                         </div>
                     </div>
@@ -101,6 +103,11 @@
             </div>
         </li>
     </ul>
+    <div class="changeCountry">
+        <h1>Check out our other packages:</h1>
+        <a href="singapore.html" class="nav-link"><button class="btn  country-btn">Singapore</button> </a>
+        <a href="dubai.html" class="nav-link"><button class="btn  country-btn">Dubai</button> </a>
+    </div>
     <script src="country.js" defer></script>
 </body>
 </html>
